--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -10,6 +10,14 @@
 
 <body>
   <h1>Testing</h1>
-</body>
 
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io();
+
+    socket.on('fullState', (data) => {
+      window.state = data;
+    })
+  </script>
+</body>
 </html>
