✨ Everyone now has a random colour

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,11 +6,7 @@
   <title>Server</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    canvas {
-      border: 1px solid black;
-    }
-  </style>
+  <link rel="stylesheet" href="/styles/app.css">
 </head>
 
 <body>
@@ -19,38 +15,6 @@
   <canvas id="canvas" width="800" height="600"></canvas>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-    const canvas = document.querySelector('#canvas');
-    const ctx = canvas.getContext('2d');
-
-    socket.on('fullState', (data) => {
-      window.state = data;
-      drawPlayerMarkers();
-    })
-
-    const drawPlayerMarkers = () => {
-      if (!('players' in window.state)) {
-        return;
-      }
-      const players = window.state.players;
-      
-      for (playerId in players) {
-        const player = players[playerId];
-        if (!player.x || !player.y) {
-          return;
-        }
-        ctx.fillRect(player.x, player.y, 5, 5)
-      }
-    };
-
-    canvas.addEventListener('click', function (data) { 
-      let rect = canvas.getBoundingClientRect();
-      socket.emit('move', {
-        x: Math.floor(data.clientX - rect.left), 
-        y: Math.floor(data.clientY - rect.top)
-      })
-    });
-  </script>
+  <script src="/scripts/app.js"></script>
 </body>
 </html>
