--- a/server/public/styles/app.css
+++ b/server/public/styles/app.css
@@ -1,3 +1,6 @@
 canvas {
     border: 1px solid black;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
