--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
   <canvas id="canvas" width="800" height="600"></canvas>
 
   <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popmotion/9.3.1/popmotion.global.min.js" integrity="sha512-lCA8fXX15HqEtY3PWLzRz7ABdGk3JUxYavDD7PvoR2WtMMcZI2gZ3u766lCwaHeMPRPZoRLLEcYq1MYpl1kgQQ==" crossorigin="anonymous"></script>
   <script src="/scripts/app.js"></script>
 </body>
 </html>
