--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&display=swap');
+
 body {
-    font-family: sans-serif;
+    font-family: 'Comic Neue', cursive;
+    font-size: 1.2rem;
 }
 
 canvas {
@@ -21,5 +24,13 @@ canvas {
 .users {
     padding: 0 40px;
     height: 800px;
+
+    ul {
+        padding: 0;
+    }
+
+    li {
+        list-style: none;
+        margin-bottom: 0.5em;
+    }
 }
-/*# sourceMappingURL=index.d3e0b875.css.map */
