--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -3,13 +3,17 @@
 body {
     font-family: 'Comic Neue', cursive;
     font-size: 1.2rem;
+    background-color: #ececec;
 }
 
 canvas {
-    border: 1px solid black;
+    border: 0px;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: #fff;
+    box-shadow: 12px 10px 0px 1px rgba(0,0,0,1);
+    border-radius: 4px;
 }
 
 .container {
