--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -8,7 +8,7 @@ body {
 
 canvas {
     border: 0px;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-color: #fff;
