--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -4,6 +4,15 @@ body {
     font-family: 'Comic Neue', cursive;
     font-size: 1.2rem;
     background-color: #ececec;
+    margin: 0;
+}
+
+.dark-bg {
+    background-image: url('../assets/dark.jpg');
+}
+
+.light-bg {
+    background-image: url('../assets/light.jpg');
 }
 
 canvas {
@@ -12,8 +21,14 @@ canvas {
     background-position: center;
     background-repeat: no-repeat;
     background-color: #fff;
-    box-shadow: 12px 10px 0px 1px rgba(0,0,0,1);
-    border-radius: 4px;
+    box-shadow: 26px 26px 0px 1px rgba(0,0,0,1);
+    border-radius: 28px;
+    border: 4px solid black;
+    flex: 0 1 100%;
+    min-width: 0;
+    min-height: 0;
+    max-height: 800px;
+    max-width: 600px;
 }
 
 .container {
@@ -23,11 +38,11 @@ canvas {
     height: 100vh;
     align-items: center;
     justify-content: center;
+    padding: 0 40px;
 }
 
 .sidebar {
     padding: 0 40px;
-    height: 800px;
 
     ul {
         padding: 0;
@@ -38,3 +53,4 @@ canvas {
         margin-bottom: 0.5em;
     }
 }
+
