--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -39,6 +39,10 @@ canvas {
     align-items: center;
     justify-content: center;
     padding: 0 40px;
+
+    @media only screen and (max-width: 600px) {
+        flex-direction: column;
+    }
 }
 
 .sidebar {
